# mod_auth_memcookie

./: .gitignore  Makefile  README.md  configure.ac  mod_auth_memcookie.c  mod_auth_memcookie.spec
src/: Makefile.am  mod_auth_memcookie.c
